--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "addcomp": "npx shadcn@latest add"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@vitejs/plugin-react": "^4.3.4",
