--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
+    "@langchain/anthropic": "^0.3.12",
+    "@langchain/community": "^0.3.28",
+    "@langchain/core": "^0.3.37",
+    "@langchain/openai": "^0.4.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.2",
+    "langchain": "^0.3.15",
     "lucide-react": "^0.466.0",
     "marked": "^15.0.3",
     "next-themes": "^0.4.4",
