--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.466.0",
     "marked": "^15.0.3",
     "next-themes": "^0.4.4",
+    "octokit": "^4.1.1",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
