--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.2",
+    "js-base64": "^3.7.7",
     "langchain": "^0.3.15",
     "lucide-react": "^0.466.0",
     "marked": "^15.0.3",
